--- a/sayfa.htm
+++ b/sayfa.htm
@@ -57,7 +57,7 @@
 </head>
 <body>
     <div class="container">
-        <p class="message">Ben de seni seviyorum! Canımın içiiiiiiiiiii <br>
+        <p class="message">Ben de seni çook seviyorum! Canımın içiiiiiiiiiii <br>
             Günaydınnnnn</p>
     </div>
     <script>
